--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=7fb919067e8b5888dfce",
+    "/css/app.css": "/css/app.css?id=ac4c29c74c79d3e36cf0"
 }
