--- a/.env
+++ b/.env
@@ -44,3 +44,6 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+BAIDU_TRANSLATE_APPID=20200916000566932
+BAIDU_TRANSLATE_KEY=WAIuy0l0P06FFyXyLpSa
