--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@ DB_USERNAME=homestead
 DB_PASSWORD=secret
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+CACHE_DRIVER=redis
 QUEUE_CONNECTION=sync
 REDIS_CLIENT=predis
 SESSION_DRIVER=file
